--- a/TODO.txt
+++ b/TODO.txt
@@ -1,27 +1,37 @@
 
+1.) FIX DEVCONNECTOR APP ISSUES & REDEPLOY IT AS A VERSION 2.0.0
+   Profiles.js: mobile display, search input styles
+   Profile.js: Back To Profiles & Edit Profile buttons centered to the left
+   Posts.js & PostItem.js: mobile display, replace like & dislike buttons with floating action buttons (Fab's)
+   Post.js & CommentItem.js: mobile display,
+   NotFound.js: Mobile display 
+ADD WHOLE DEVCONNECTOR SOURCE CODE TO GITHUB REPO
+FIX LIKE & UNLIKE FUNCTIONALITY
+Create a new user, new profile & few posts and comments to tst redux store
+TODAY FINISH BOTH DevConnector & COVID-19 Tracker App & Add them to the portfolio website & Github profile!
+Fix deployment errors...
 
-UPDATE THE ANGELLIST PROFILE 
-(Profile & Cover Photos, Your Biggest Achievement, etc.)
+2.) Pre-deployment optimizations: 
+  Frontend: React.lazy, React.memo, ErrorBoundary,
+            Suspense with fallback (i.e. <Spinner />)
+  Backend: Some minor optimizations for the production environment (packages cors, compression & express-sslify)
+           if (process.env.NODE_ENV === "production") {
+             app.use(compression());
+             app.use(enforce.HTTPS({ trustProtoHeader: true }));
+             app.use(express.static(path.join(__dirname, "client/build")));
+
+             app.get("*", (req, res) => {
+               res.sendFile(path.join(__dirname, "client/build", "index.html"));
+             });
+           }
+
+3.) Deploy DevConnector to Heroku (Target Heroku URL: devconnectorwebapp.herokuapp.com)
+
+4.) Add it to the projectInfo.js inside Portfolio Website
+
+5.) Add it to the Resume (with the Corresponding URL)
+
+6.) Add it to Your AngelList Profile 
 
 
-DEVCONNECTOR (The MERN Stack Course): 
-1.) Finish the Course & the Whole App ASAP! (max. 10 Days!) - change back to { expiresIn: 3600 } inside auth.js & users.js routes before deploying the app!!
-2.) Add it to the projectInfo.js inside Portfolio Website
-3.) Add it to the Resume (with the Corresponding URL)
-4.) Add it to Your AngelList Profile 
-
-
-COMPLETE THE FULL CLOUD FUNCTIONS MASTER COURSE (max. 2 Days!)
-
-
-FIND A JOB:
-1.) Apply to 100+ Remote React/MERN Stack Jobs: 
-    (Search for Remote Jobs on Angel.co, StackOverflow, 
-    remote jobs on Indeed.com, CrunchBase, RemoteOk, 
-    WeWorkRemotely, Remotive, Remote.co, StartupHire.com, 
-    Startuppers.club etc.)
-  
-
-THINGS TO DO LATER:
-1.) Open a Brokerage Account & Start Investing in the Stock Market!
-2.) Build a Side Project/Startup! (Most likely organizer/habit maker app)
+++ COMPLETE THE FULL CLOUD FUNCTIONS MASTER COURSE (max. 2 Days!)
